project(openmx)

cmake_minimum_required(VERSION 2.6)
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

set(CMAKE_BUILD_TYPE Release)

set(SRC
    openmx.c
    openmx_common.c
    Input_std.c
    Inputtools.c
    init.c
    LU_inverse.c
    ReLU_inverse.c
    truncation.c
    Find_ApproxFactN.c
    readfile.c
    FT_PAO.c
    FT_NLP.c
    FT_ProExpn_VNA.c
    FT_VNA.c
    FT_ProductPAO.c
    Hamiltonian_Cluster.c
    Overlap_Cluster.c
    Hamiltonian_Band.c
    Overlap_Band.c
    Hamiltonian_Cluster_NC.c
    Hamiltonian_Band_NC.c
    Hamiltonian_Cluster_SO.c
    Get_OneD_HS_Col.c
    SetPara_DFT.c
    XC_Ceperly_Alder.c
    XC_CA_LSDA.c
    XC_PW91C.c
    XC_PBE.c
    XC_EX.c
    DFT.c
    Mixing_DM.c
    Force.c
    Poisson.c
    Cluster_DFT.c
    Cluster_DFT_Dosout.c
    Band_DFT_Col.c
    Band_DFT_NonCol.c
    Band_DFT_kpath.c
    Band_DFT_MO.c
    Band_DFT_Dosout.c
    Set_Density_Grid.c
    Set_Orbitals_Grid.c
    Set_Aden_Grid.c
    Gauss_Legendre.c
    zero_cfrac.c
    xyz2spherical.c
    AngularF.c
    RadialF.c
    Dr_RadialF.c
    PhiF.c
    VNAF.c
    Dr_VNAF.c
    VH_AtomF.c
    Dr_VH_AtomF.c
    Dr_AtomicDenF.c
    RF_BesselF.c
    QuickSort.c
    Nonlocal_RadialF.c
    AtomicDenF.c
    Mulliken_Charge.c
    Occupation_Number_LDA_U.c
    Eff_Hub_Pot.c
    EulerAngle_Spin.c
    Smoothing_Func.c
    Orbital_Moment.c
    AtomicPCCF.c
    Dr_AtomicPCCF.c
    Pot_NeutralAtom.c
    Simple_Mixing_DM.c
    DIIS_Mixing_DM.c
    GR_Pulay_DM.c
    Kerker_Mixing_Rhok.c
    DIIS_Mixing_Rhok.c
    Total_Energy.c
    Contract_Hamiltonian.c
    Contract_iHNL.c
    Cont_Matrix0.c
    Cont_Matrix1.c
    Cont_Matrix2.c
    Cont_Matrix3.c
    Opt_Contraction.c
    Initial_CntCoes.c
    Set_XC_Grid.c
    Get_Orbitals.c
    Get_dOrbitals.c
    Get_Cnt_Orbitals.c
    Get_Cnt_dOrbitals.c
    Gaunt.c
    Find_CGrids.c
    MD_pac.c
    RestartFileDFT.c
    Output_CompTime.c
    Merge_LogFile.c
    Make_FracCoord.c
    Make_InputFile_with_FinalCoord.c
    Divide_Conquer.c
    GDivide_Conquer.c
    Krylov.c
    Krylov_Dosout.c
    Divide_Conquer_Dosout.c
    GDivide_Conquer_Dosout.c
    Eigen_lapack.c
    EigenBand_lapack.c
    Eigen_PReHH.c
    BroadCast_ReMatrix.c
    Eigen_PHH.c
    BroadCast_ComplexMatrix.c
    lapack_dstedc1.c
    lapack_dstedc2.c
    lapack_dstegr1.c
    lapack_dstegr2.c
    lapack_dstevx1.c
    lapack_dstevx2.c
    lapack_dsteqr1.c
    Nonlocal_Basis.c
    Set_OLP_Kin.c
    Set_Nonlocal.c
    Set_ProExpn_VNA.c
    Set_Hamiltonian.c
    Set_Vpot.c
    Voronoi_Charge.c
    Voronoi_Orbital_Moment.c
    Fuzzy_Weight.c
    dampingF.c
    deri_dampingF.c
    Spherical_Bessel.c
    iterout.c
    iterout_md.c
    Allocate_Arrays.c
    Free_Arrays.c
    Init_List_YOUSO.c
    outputfile1.c
    malloc_multidimarray.c
    PrintMemory.c
    PrintMemory_Fix.c
    dtime.c
    OutData.c
    init_alloc_first.c
    File_CntCoes.c
    SCF2File.c
    mimic_mpi.c
    mimic_omp.c
    Make_Comm_Worlds.c
    Set_Allocate_Atom2CPU.c
    Cutoff.c
    Generating_MP_Special_Kpt.c
    setup_CPU_group.c
    Maketest.c
    Runtest.c
    Memory_Leak_test.c
    Force_test.c
    Show_DFT_DATA.c
    TRAN_Allocate.c
    TRAN_DFT.c
    TRAN_DFT_Dosout.c
    TRAN_Apply_Bias2e.c
    TRAN_FFT_interpolation3c.c
    TRAN_RestartFile.c
    TRAN_Calc_CentGreen.c
    TRAN_Input_std.c
    TRAN_Set_CentOverlap.c
    TRAN_Calc_CentGreenLesser.c
    TRAN_Calc_GC_LorR.c
    TRAN_Input_std_Atoms.c
    TRAN_Set_Electrode_Grid.c
    TRAN_Calc_GridBound.c
    TRAN_Interp_ElectrodeDensity_Grid.c
    TRAN_Set_IntegPath.c
    TRAN_Output_HKS.c
    TRAN_Set_MP.c
    TRAN_Calc_SelfEnergy.c
    TRAN_Output_Trans_HS.c
    TRAN_Set_PathEnergyStr.c
    TRAN_Calc_SurfGreen.c
    TRAN_Output_Transmission.c
    TRAN_Set_SurfOverlap.c
    TRAN_Overwrite_Densitygrid.c
    TRAN_Set_Value.c
    TRAN_Calc_VHartree_G0.c
    TRAN_Overwrite_V2.c
    TRAN_adjust_Grid_Origin.c
    TRAN_Calc_VHartree_Gnon0.c
    TRAN_Poisson.c
    TRAN_adjust_Ngrid.c
    TRAN_Print.c
    TRAN_Print_Grid.c
    Lapack_LU_inverse.c
    TRAN_Distribute_Node.c
    TRAN_Output_HKS_Write_Grid.c
    TRAN_Credit.c
    TRAN_Check_Region_Lead.c
    TRAN_Check_Region.c
    RecursionS_H.c
)

add_definitions(-Dnompi -Dnoomp)

add_executable(openmx ${SRC})
target_link_libraries(openmx fftw3 lapack blas gfortran)
